# eml-qualified-reproduction-audit

./: .gitignore  AUTHOR_NOTE.md  CHANGELOG.md  CITATION.cff  COMMUNITY_SUMMARY.md  CONTRIBUTING.md  FINAL_AUDIT_INDEX.md  LICENSE  PROOF_SNAPSHOT.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: alternate-witness.md  branch-semantics.md  reproduction-bug.md
docs/: branch_cuts.md  branch_literature_review.md  final_report_template.md  future_work.md  github_publication_notes.md  lab_journal.md  paper_review.md  proof_strategy.md  release_v0.1-qualified-reproduction.md  repo_map.md  reproducibility.md  reproduction_plan.md  research_question.md  semantics.md  status_policy.md
reports/: arccos_author_chain_audit.md  arccos_dependency_isolation.md  arcosh_extended_domain_audit.md  compositional_validity_audit.md  final_proof_risks.md  inverse_function_branch_audit.md  reproduction_report.md  rust_constant_audit.md  status_matrix.md
scripts/: bootstrap_sources.py  build_status_matrix.py  final_reproduction_check.py  run_all_tests.py
sources/: manifest.md  notes.md
src/eml_lab/: __init__.py  arccos_staged_reproduction.py  ast.py  (+11 more)
tests/: test_arccos_staged_reproduction.py  test_arcosh_extended_domain.py  test_arithmetic_spine.py  test_branch_cases.py  test_branch_sensitive_witnesses.py  test_core_identities.py  test_expansion.py  test_hyperbolic_remaining.py  test_internal_arcosh_helper.py  test_inverse_branch_diagnostics.py  test_iteration6_regression.py  test_loglower_backend.py  test_numeric_verification.py  test_unwinding.py  test_witness_registry.py
(+5 files in other folders)
