[project]
name = "eml-qualified-reproduction-audit"
version = "0.1.0"
description = "Independent qualified reproduction audit of EML scientific-calculator basis claims."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "EML Qualified Reproduction Audit contributors" }]
dependencies = [
  "hypothesis>=6.100",
  "jupyter>=1.0",
  "matplotlib>=3.8",
  "mpmath>=1.3",
  "numpy>=1.26",
  "pandas>=2.2",
  "pytest>=8.0",
  "sympy>=1.12",
]

[project.optional-dependencies]
torch = ["torch>=2.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eml_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
